# mhm2_staging

./: .clang-format  .dockerignore  .env-cori-haswell-cray.sh  .env-cori-haswell-gnu.sh  .env-cori-haswell-intel.sh  .env-cori-knl-cray.sh  .env-cori-knl-gnu.sh  .env-cori-knl-intel.sh  .env-summit-gnu.sh  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeDefinitions.txt  CMakeLists.txt  ChangeLog.md  LEGAL.txt  LICENSE.txt  README.md  build.sh  upcxx-run-summit
.env-MacOSX/: clang.sh
.env-cori/: env-knl-cray.sh
.env-cori-gpu/: gnu.sh
.env-cori-haswell/: cray.sh  gnu.sh  intel.sh
.env-cori-knl/: cray.sh  gnu.sh  intel.sh
.env-summit/: gnu.sh
ci/: check_asm_quality.py  ci_asm_qual_test-full.sh  ci_asm_qual_test.sh  ci_test.sh  good-arctic-sample0-k31k63.txt  good-arctic-sample0-k63.txt  good-arctic-sample0.txt  good-arcticsynth.txt
cmake/Modules/: CheckSubmodules.cmake  FindCpuArch.cmake  GetGitVersion.cmake
contrib/: collect_comm_stats.cpp  install_upcxx.sh  trim_fastq.sh
contrib/docker/: Dockerfile  Dockerfile-ubuntu-18.04  Dockerfile-ubuntu-20.04  build_docker.sh  run_docker.sh
contrib/environments/MacOSX/: clang.sh
contrib/environments/cori-cmem/: gnu.sh
contrib/environments/cori-gpu/: gnu.sh  intel.sh
contrib/environments/cori-haswell/: cray.sh  gnu.sh
contrib/environments/lawrencium/: gnu.sh
contrib/environments/summit/: gnu.sh
docs/: .gitignore  Makefile  copy-ack-legal.md  embed-image.sh  mhm_guide.html  mhm_guide.md  pandoc.css
include/: CLI11.hpp  aggr_store.hpp  alignments.hpp  aln_depths.hpp  argh.h  argh.hpp  bloom.hpp  bytell_hash_map.hpp  colors.h  contigging.hpp  contigs.hpp  ctg_graph.hpp  dbjg_traversal.hpp  fastq.hpp  flat_hash_map.hpp  gasnet_stats.hpp  hash_funcs.h  histogram_dht.hpp  histogrammer.hpp  kcount.hpp  klign.hpp  kmer.hpp  kmer_dht.hpp  localassm.hpp  main.hpp  options.hpp  packed_reads.hpp  post_assembly.hpp  progressbar.hpp  scaffolding.hpp  stage_timers.hpp  utils.hpp  version.h
misc-scripts/: bin_gfa.py  cluster_genomes.py  eval_clusters.py  found-genomes-mq.sh  plot_clusters.py  plot_depths_tnfs.py
src/: CMakeDefinitions.txt  CMakeLists.txt  alignments.cpp  aln_depths.cpp  bloom.cpp  build_ctg_graph.cpp  cgraph.cpp  contigging-extern-template.in.cpp  contigging.cpp  contigs.cpp  ctg_graph.cpp  dbjg_traversal.cpp  extern_template.in.cpp  fastq.cpp  hash_funcs.c  histogrammer.cpp  kcount-extern-template.in.cpp  kcount.cpp  klign-extern-template.in.cpp  klign.cpp  kmer-extern-template.in.cpp  kmer.cpp  kmer_dht-extern-template.in.cpp  kmer_dht.cpp  localassm.cpp  localassm_walk.cpp  main.cpp  main_static_objs.cpp  merge_reads.cpp  merge_reads.hpp  mhm2.py  mhm2_parse_run_log.pl  mhmxx.py  options.cpp  options.hpp  packed_reads.cpp  post_assembly-extern-template.in.cpp  post_assembly.cpp  prepare_release.sh  scaffolding-extern-template.in.cpp  (+6 more)
src/adept-sw/: CMakeLists.txt  driver.cpp  driver.cu  driver.hpp  gpu_alns.cpp  gpu_alns.hpp  kernel.cpp  kernel.hpp  utils_gpu.cpp  utils_gpu.hpp
src/common/: bytell_hash_map.hpp  hash_funcs.c  progressbar.hpp  utils.hpp
src/gpu_loc_assem/: CMakeLists.txt  Makefile  driver.cpp  driver.hpp  helper.cpp  helper.hpp  kernel.cpp  kernel.hpp  locassem_struct.hpp  main.cpp
src/kcount/: bloom.hpp  kcount.cpp  kmer.hpp  kmer_dht.hpp
src/ssw/: CMakeLists.txt  ssw.cpp  ssw.hpp  ssw_core.cpp  ssw_core.hpp  vec128int.h  veclib_types.h
src/zstr/src/: strict_fstream.hpp  zstr.hpp
test/: CMakeLists.txt  kmer-test.cpp  ssw-test.cpp  version-test.cpp
